<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="image_poster">Image Poster</string>
    <string name="tv_title">Title</string>
    <string name="tv_release_year">Release Year</string>
    <string name="tv_runtime">min</string>
    <string name="movie">Movies</string>
    <string name="tv_show">TV Shows</string>
    <string name="share">Share</string>
    <string name="logo">The Movie DB Logo</string>
    <string name="image_backdrop">Image Backdrop</string>
    <string name="vote_average">9.8</string>
    <string name="tagline">Tagline</string>
    <string name="description">Description</string>
    <string name="share_title">Share Now</string>
    <string name="fab">Favorite Button</string>
    <string name="tab_movie">MOVIES</string>
    <string name="tab_tv_show">TV SHOWS</string>
    <string name="favorite">Favorites</string>
    <string name="undo">Undo to remove %s</string>
    <string name="ok">OK</string>
    <string name="empty_favorite">Favorite is Empty</string>
    <string name="highest_vote">Highest Vote</string>
    <string name="title_asc">Title (A-Z)</string>
    <string name="title_desc">Title (Z-A)</string>
    <string name="tv_search">Search</string>z
    <string name="search_yours">Search Movie / TvShow</string>
    <string name="lowest_vote">Lowest Vote</string>
    <string name="sort_title_asc">Sorted by Title (A-Z)</string>
    <string name="sort_title_desc">Sorted by Title (Z-A)</string>
    <string name="sort_highest_vote">Sorted by Highest Vote</string>
    <string name="sort_lowest_vote">Sorted by Lowest Vote</string>
    <string name="add_favorite">Added to Favorite</string>
    <string name="remove_favorite">Remove from Favorite</string>
    <string name="error_msg">Error</string>
    <string name="title_favorite">Favorite</string>
</resources>