<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progres_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loading_spinner.json"
            app:lottie_loop="true"
            tools:layout_editor_absoluteY="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/image_backdrop"
            android:scaleType="centerCrop"
            android:alpha="0.8"
            tools:src="@color/placeholder"
            app:layout_collapseMode="parallax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/tv_title"
            android:textColor="@color/light_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_collapseMode="parallax"
            app:layout_constraintBottom_toBottomOf="@id/img_backdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:scaleType="fitXY"
            android:src="@color/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_backdrop"
            android:contentDescription="@string/image_poster" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/bg_rating"
            android:gravity="center"
            android:text="@string/vote_average"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/img_backdrop"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_release_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_release_year"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            android:fontFamily="monospace"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/img_backdrop" />

        <TextView
            android:id="@+id/tv_runtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_runtime"
            android:textColor="@color/blue_500"
            android:textSize="14sp"
            android:fontFamily="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_release_year" />

        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/tagline"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:alpha="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_runtime" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/description"
            android:textColor="@color/blue_500"
            android:textSize="14sp"
            android:lineSpacingMultiplier="1.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>



